Bug 64512 - Impress loses Custom Animations for SVG imports at save or load
Summary: Impress loses Custom Animations for SVG imports at save or load
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords:
: 62269 64552 66194 66936 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-12 22:38 UTC by Paul Chvostek
Modified: 2013-09-02 22:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Incredibly simple SVG with which the screenshots listed in the Description were generated (143 bytes, image/svg+xml)
2013-05-12 22:38 UTC, Paul Chvostek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Chvostek 2013-05-12 22:38:15 UTC
Created attachment 79218 [details]
Incredibly simple SVG with which the screenshots listed in the Description were generated

When SVG images are imported into Impress, custom animations that are applied do not retain their connection to the SVG they're associated with, when the document is saved and reloaded.

Screenshot of the Impress before save:
http://www.it.ca/~paul/dev/a/impress-before-save-20.jpg

Screenshot of Impress after save/close/reopen:
http://www.it.ca/~paul/dev/a/impress-after-save-20.jpg

The sample SVG I used to create these screenshots is attached to this bug report.

Note the "-1" in place of "SVG 1" in the Custom Animations list.

TO REPLICATE:
1. Open a new Impress document, and place circle.svg on the first page.
2. On the right-hand side, select "Custom Animation", and add something.
   I tested with Motion Path for easy visibility, but Entry>Appear or
   Exit>Disappear should work too.
3, Save the Impress file, and re-open it.
4. Look at the list of animations, you should see that instead of being
   named "SVG 1" (as it was when you imported it) or if the name is now "-1".

If the animation is attached to "-1", then the animation has detached from the imported object.  I can't tell whether this is a problem in how SVGs are handled during load/save, how they are imported, or how Custom Animations are linked to them, but those are where I'd look.

I'm experiencing this in 4.0.3.3.  It's been verified in 4.0.2, as well as on Master by thorsten in IRC.
Comment 1 Paul Chvostek 2013-05-13 16:14:08 UTC
See also: bug 64552

It seems that in addition to not "remembering" custom animations, this problem may be causing 4.0.3.3 (and Master) to crash.
Comment 2 ign_christian 2013-05-14 14:10:53 UTC
I see animations works as expected on LO 4.0.3.3 (Win7 Home Premium 32bit) using these steps:

1. Open that .svg file using Draw
2. Copy-paste that object to blank Impress file
3. Add Custom Animation: Motion Path to that object
4. Save as .ppt
5. Close & reopen that .ppt file
6. Animation still works as before
Comment 3 Commit Notification 2013-05-15 09:19:38 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=450cd772aa734cfcb989c8cedd3c0a454db74a34

Fix fdo#64512 Handle xml:id correctly on multi-image draw:frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Thorsten Behrens (allotropia) 2013-05-15 09:27:16 UTC
Fixed on master. Related: bug 60075
Comment 5 Thorsten Behrens (allotropia) 2013-05-15 09:28:19 UTC
*** Bug 64552 has been marked as a duplicate of this bug. ***
Comment 6 ign_christian 2013-07-14 03:11:35 UTC
*** Bug 66194 has been marked as a duplicate of this bug. ***
Comment 7 ign_christian 2013-07-14 03:13:42 UTC
*** Bug 62269 has been marked as a duplicate of this bug. ***
Comment 8 ign_christian 2013-07-16 01:29:39 UTC
*** Bug 66936 has been marked as a duplicate of this bug. ***