include/xmloff/unointerfacetouniqueidentifiermapper.hxx
@@ -24,7 +24,6 @@
 #include "xmloff/dllapi.h"
 #include "sal/types.h"
 
-#include <deque>
 #include <map>
 #include <rtl/ustring.hxx>
 #include <com/sun/star/uno/XInterface.hpp>
@@ -32,12 +31,10 @@
 namespace comphelper
 {
 
-typedef ::std::map< OUString, const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface > > IdMap_t;
+typedef ::std::map< OUString, ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface > > IdMap_t;
 
 class XMLOFF_DLLPUBLIC UnoInterfaceToUniqueIdentifierMapper
 {
-    typedef std::deque< rtl::OUString > Reserved_t;
-
 public:
     UnoInterfaceToUniqueIdentifierMapper();
     ~UnoInterfaceToUniqueIdentifierMapper();
@@ -54,16 +51,12 @@ public:
     */
     bool registerReference( const OUString& rIdentifier, const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface >& rInterface );
 
-    /** reserves an identifier for later registration.
+    /** always registers the given uno object with the given identifier.
 
-        @returns
-            false, if the identifier already exists
-      */
-    bool reserveIdentifier( const rtl::OUString& rIdentifier );
-
-    /** registers the given uno object with reserved identifier.
-      */
-    bool registerReservedReference( const rtl::OUString& rIdentifier, const com::sun::star::uno::Reference< com::sun::star::uno::XInterface >& rInterface );
+        In contrast to registerReference(), this here overwrites any
+        earlier registration of the same identifier
+    */
+    void registerReferenceAlways( const rtl::OUString& rIdentifier, const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface >& rInterface );
 
     /** @returns
             the identifier for the given uno object. If this uno object is not already
@@ -80,12 +73,10 @@ public:
 private:
     bool findReference( const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface >& rInterface, IdMap_t::const_iterator& rIter ) const;
     bool findIdentifier( const OUString& rIdentifier, IdMap_t::const_iterator& rIter ) const;
-    bool findReserved( const OUString& rIdentifier ) const;
-    bool findReserved( const OUString& rIdentifier, Reserved_t::const_iterator& rIter ) const;
+    void insertReference( const OUString& rIdentifier, const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XInterface >& rInterface );
 
     IdMap_t	maEntries;
     sal_Int32 mnNextId;
-    Reserved_t maReserved;
 };
 
 }
